--- a/Articulos.html
+++ b/Articulos.html
@@ -4,13 +4,13 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anorak Technology</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="fila">
-                    <h1><img src="img/logo.jpg" class="logo" alt="Logo Anorak"></h1>
+                    <h1><img src="logo.jpg" class="logo" alt="Logo Anorak"></h1>
             </div>  
         </div>
     </header>
@@ -34,7 +34,7 @@
         <div class="fila">
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/PS4.webp" class="imagen-pan u-full-width">
+                    <img src="PS4.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>PlayStation 4 Slim de 1TB Paquete FIFA 20</h4>
                         <p class="precio">L. 16,995.00 <span class="u-pull-right">L. 13,995.00</span> </p>
@@ -43,7 +43,7 @@
             </div>
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/PS42.webp" class="imagen-pan u-full-width">
+                    <img src="PS42.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>PlayStation 4 Slim de 1TB Megapaquete +3 Juegos </h4>
                         <p class="precio">L. 16,995.00 <span class="u-pull-right">L. 14,995.00</span> </p>
@@ -52,7 +52,7 @@
             </div>
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/NS.webp" class="imagen-pan u-full-width">
+                    <img src="NS.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Nintendo Switch v1.1 Joycons Azul y Rojo Neon </h4>
                         <p class="precio">L. 15,995.00 <span class="u-pull-right">L. 11,995.00</span> </p>
@@ -64,7 +64,7 @@
         <div class="fila">
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/SMTV.jpg" class="imagen-pan u-full-width">
+                    <img src="SMTV.jpg" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Smart TV Samsung 58" LED 4K UHD </h4>
                         <p class="precio">L. 18,999.00 <span class="u-pull-right">L. 16,999.00</span> </p>
@@ -73,7 +73,7 @@
             </div>
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/CHRC.webp" class="imagen-pan u-full-width">
+                    <img src="CHRC.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Google Chromecast 3ra Generación </h4>
                         <p class="precio">L. 1,400.00 <span class="u-pull-right">L. 1,299.00</span> </p>
@@ -82,7 +82,7 @@
             </div>
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/DL.webp" class="imagen-pan u-full-width">
+                    <img src="DL.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Monitor Gaming Dell 23.6" 144Hz Gsync </h4>
                         <p class="precio">L. 5,999.00 <span class="u-pull-right">L. 4,500.00</span> </p>
@@ -94,7 +94,7 @@
         <div class="fila">
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/IM.webp" class="imagen-pan u-full-width">
+                    <img src="IM.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Impresora Multifuncional HP DeskJet </h4>
                         <p class="precio">L. 999.00 <span class="u-pull-right">L. 895.00</span> </p>
@@ -103,7 +103,7 @@
             </div>
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/AI.webp" class="imagen-pan u-full-width">
+                    <img src="AI.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Aire Acondicionado Frigidaire Básico </h4>
                         <p class="precio">L. 8,995.00 <span class="u-pull-right">L. 7,499.00</span> </p>
@@ -112,7 +112,7 @@
             </div>
             <div class="prod columna">
                 <div class="carta">
-                    <img src="img/RC.webp" class="imagen-pan u-full-width">
+                    <img src="RC.webp" class="imagen-pan u-full-width">
                     <div class="desc-carta">
                         <h4>Smart TV RCA 65" LED 4K UHD/ RC65-A21S </h4>
                         <p class="precio">L. 17,995.00 <span class="u-pull-right">L. 13,995.00</span> </p>
@@ -127,7 +127,7 @@
     <footer>
         <center>
             <h4>Metodos de pago</h4>
-            <img src="img/MP.png" class="imagen-pan u-full-width" alt="Metodos de pago"><br>
+            <img src="MP.png" class="imagen-pan u-full-width" alt="Metodos de pago"><br>
             Derechos Reservados ©ANORAK TECHNOLOGY 2021<br><br>
         </center>
 
