--- a/contacto.html
+++ b/contacto.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
 
     <title>Contacto</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <header class="header">
         <div class="container">
             <div class="fila">
-                    <h1><img src="img/logo.jpg" class="logo" alt="Logo Anorak"></h1>
+                    <h1><img src="logo.jpg" class="logo" alt="Logo Anorak"></h1>
             </div>  
         </div>
     </header>
