--- a/ubicacion.html
+++ b/ubicacion.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anorak Technology</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="header">
         <div class="container">
             <div class="fila">
-                    <h1><img src="img/logo.jpg" class="logo" alt="Logo Anorak"></h1>
+                    <h1><img src="logo.jpg" class="logo" alt="Logo Anorak"></h1>
             </div>  
         </div>
     </header>
