--- a/acerca.html
+++ b/acerca.html
@@ -18,7 +18,7 @@
     
     <nav>
         <a href="index.html">Inicio</a>
-        <a href="articulos.html">Articulos</a>
+        <a href="Articulos.html">Articulos</a>
         <a href="ubicacion.html">Ubicanos</a>
         <a href="acerca.html">Acerca de nosotros</a>
         <a href="contacto.html">Contactanos dando click aqui</a>
